# CompMathLab1

./: CMakeLists.txt  README.md
.VSCodeCounter/2024-03-05_04-48-45/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
src/: console.cpp  file.cpp  handler.h  main.cpp  matr.cpp  method_of_simple_iteration.cpp  mth.h  random.cpp  result.cpp  slau.cpp  slau.h  vec.cpp
